--- a/plugin.xml
+++ b/plugin.xml
@@ -14,11 +14,11 @@
 <keywords>twitter,phonegap 3, cli, tweet</keywords>
 <license>MIT</license>
 
-<js-module src="www/CDVPluginTwitter.js" name="Twitter">
+<!--<js-module src="www/CDVPluginTwitter.js" name="Twitter">
     <clobbers target="cordova.plugins.twitter" />
 </js-module>
 
-<!--<platform name="ios">
+<platform name="ios">
 
     <config-file target="config.xml" parent="/*">
         <feature name="CDVPluginTwitter">
