--- a/plugin.xml
+++ b/plugin.xml
@@ -28,7 +28,9 @@
     </config-file>    
 
     <header-file src="src/ios/CDVPluginTwitter.h" />
-
     <source-file src="src/ios/CDVPluginTwitter.m" />
+
+    <framework src="Accounts.framework" weak="true" />
+    <framework src="Twitter.framework" weak="true" />
     
 </platform>
