--- a/plugin.xml
+++ b/plugin.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?><plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
+<?xml version="1.0" encoding="UTF-8"?>
+<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="com.phonegap.plugins.CDVPluginTwitter"
     version="1.0.0">
@@ -34,3 +35,5 @@
     <framework src="Twitter.framework" weak="true" />
     
 </platform>
+
+</plugin>
